# orchestration-cluster-api-rust

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  openapi-generator-config.yaml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml  README.md
client/docs/: ActivatedJobResult.md  AdHocSubProcessActivateActivitiesInstruction.md  AdHocSubProcessActivateActivityReference.md  AdHocSubProcessApi.md  AdvancedActorTypeFilter.md  AdvancedAgentHistoryItemKeyFilter.md  AdvancedAgentInstanceHistoryCommitStatusFilter.md  AdvancedAgentInstanceHistoryRoleFilter.md  AdvancedAgentInstanceKeyFilter.md  AdvancedAgentInstanceStatusFilter.md  AdvancedAuditLogEntityKeyFilter.md  AdvancedAuditLogKeyFilter.md  AdvancedBatchOperationItemStateFilter.md  AdvancedBatchOperationStateFilter.md  AdvancedBatchOperationTypeFilter.md  AdvancedCategoryFilter.md  AdvancedClusterVariableKindFilter.md  AdvancedClusterVariableScopeFilter.md  AdvancedDateTimeFilter.md  AdvancedDecisionDefinitionKeyFilter.md  AdvancedDecisionEvaluationInstanceKeyFilter.md  AdvancedDecisionEvaluationKeyFilter.md  AdvancedDecisionInstanceStateFilter.md  AdvancedDecisionRequirementsKeyFilter.md  AdvancedDeploymentKeyFilter.md  AdvancedElementIdFilter.md  AdvancedElementInstanceKeyFilter.md  AdvancedElementInstanceStateFilter.md  (+628 more)
examples/: deploy_and_start.rs  deploy_start_and_work.rs  readme.rs  topology.rs  worker.rs
scripts/: __init__.py  generate.sh  postprocess.py  postprocess_domain_types.py  sync-readme-snippets.py  vendor.sh
src/: lib.rs
tests/: activated_job_priority.rs
(+672 files in other folders)
