[package]
name = "camunda-orchestration-sdk"
version = "0.1.1"
edition = "2021"
description = "Ergonomic Rust SDK for the Camunda 8 Orchestration Cluster REST API"
license = "Apache-2.0"
repository = "https://github.com/camunda/orchestration-cluster-api-rust"
readme = "README.md"
keywords = ["camunda", "zeebe", "bpmn", "workflow", "orchestration"]
categories = ["api-bindings", "asynchronous"]

[workspace]
members = ["client"]

[dependencies]
camunda-orchestration-api-client = { path = "client", version = "0.1.1" }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = "2"
# Nano-aware command-stream transport (opt-in upgrade for nanobpmn gateways).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "camunda-orchestration-api-client/native-tls"]
rustls = ["reqwest/rustls", "camunda-orchestration-api-client/rustls"]
